@@ -1,3 +1,5 @@
+Dec 03 2002  2.7.1  Fixed kismet_monitor and kismet_unmonitor to work with the
+                     new source definitions.
 Dec 02 2002  2.7.1  Tweaked how frontend handles group naming to be faster
                      and to handle changing SSID's gracefully.
                     Changed configfile parser to allow multiple options of the
